# raft-stateright

./: Cargo.toml  README.md  rustfmt.toml
src/: config.rs  election.rs  lib.rs  messages.rs  replication.rs  server.rs  state.rs  timers.rs  types.rs  update_term.rs
src/checker/: cfg.rs  cli.rs  main.rs
